# shm-ring

./: .gitignore  Cargo.toml  Readme.md  cbindgen.toml  server
.cargo/: config.toml
doc/: design.md  motivation.md
examples/: client.json  client.rs  controller.rs  ping.rs  pipe_a.rs  pipe_b.rs  server.json  server.rs
examples/client-wasi/: Cargo.toml
examples/client-wasi/src/: main.rs  stream.rs
examples/fizz-buzz/: Cargo.toml  rust-toolchain.toml
examples/fizz-buzz/.cargo/: config.toml
examples/fizz-buzz/src/: main.rs
examples/io-uring-semantics/: Cargo.toml  Readme.md
examples/io-uring-semantics/src/: main.rs  ring.rs
src/: atomic.rs  client.rs  control.rs  controller.rs  data.rs  frame.rs  io_uring.rs  lib.rs  linux.rs  process.rs  ring.rs  server.rs  uapi.rs
tests/: echo.rs  io-uring-communicate.rs  io-uring.rs  reaping.rs  server.rs
xtask/cbindgen/: Cargo.toml
xtask/cbindgen/src/: main.rs
