[package]
name = "client-wasi"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6"
clap = { version = "4", features = ["cargo"] }
memmap2 = "0.9"
quick-error = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shm-pbx = { path = "../../" }
tokio = { version = "1", features = ["io-util", "sync"] }
wasmtime = "20.0"
wasmtime-wasi = "20.0"
